--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .name-and-search {
-  margin-top: 15%;
+  margin-top: 5%;
 }
 
 .video-wrapper {
@@ -25,6 +25,24 @@ h1, p {
   word-spacing: 2px;
 }
 
+.melody-modal {
+  width: 80%;
+  padding: 10px;
+  background-color: darkgray;
+  border-radius: 5px;
+}
+
+.melody-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /*h1, #opener p {
     -webkit-font-smoothing: antialiased;
 }*/
