--- a/main.css
+++ b/main.css
@@ -26,7 +26,6 @@ h1, p {
 }
 
 .melody-modal {
-  visibility: collapse;
   width: 80%;
   padding: 10px;
   background-color: darkgray;
@@ -34,7 +33,6 @@ h1, p {
 }
 
 .melody-overlay {
-  visibility: collapse;
   position: fixed;
   top: 0;
   left: 0;
@@ -45,6 +43,15 @@ h1, p {
   align-items: center;
   justify-content: center;
 }
+
+.thumbnail {
+  margin-bottom: 30px;
+}
+
+.thumbnail img {
+  width: 100%;
+}
+
 /*h1, #opener p {
     -webkit-font-smoothing: antialiased;
 }*/
